package remote_actors.protobuf;

message PBufSend {
  required PBufSendType sendType     = 1;
  optional string       senderName   = 2;
  required string       receiverName = 3;
  optional bytes        metaData     = 4;
  required bytes        data         = 5;
  optional string       session      = 6;

  enum PBufSendType {
    ASYNC_SEND = 1;
    SYNC_SEND  = 2;
    SYNC_REPLY = 3;
  }
}

message PBufRemoteApply {
  required string                 senderName   = 1;
  required string                 receiverName = 2;
  required PBufRemoteFunctionType functionType = 3;
  optional string                 reason       = 4;
  
  enum PBufRemoteFunctionType { 
    LINK_FUN   = 1;
    UNLINK_FUN = 2;
    EXIT_FUN   = 3;
  }
}

message PBufRemoteStartInvoke {
  required string actorClass = 1;
}

message PBufRemoteStartInvokeAndListen {
  required string actorClass = 1;
  required int32  port       = 2;
  required string name       = 3;
}
